--- a/calculator.css
+++ b/calculator.css
@@ -18,6 +18,7 @@ body{background-color: rgb(17, 21, 26);}
     padding: 20px 5px 0px 5px;
     border-radius: 2px;
     overflow-x: auto;
+    overflow-y: hidden;
 }
 #Keys{
     display: flex;
