--- a/calculator.css
+++ b/calculator.css
@@ -1,4 +1,17 @@
 body{background-color: rgb(17, 21, 26);}
+#box{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    font-weight: 100;
+    text-align: center;
+    background-color: rgb(212, 154, 127);
+    margin: 20px auto 10px;
+    width: 341px;
+    height: 40px;
+    border-radius: 2px;
+    opacity: 0;
+    transition:  0.5s;
+}
 #calc{
     background-color: rgb(133, 133, 133);
     width: 341px;
