--- a/calculator.css
+++ b/calculator.css
@@ -1,64 +1,90 @@
-body{background-color: rgb(17, 21, 26);}
-#box{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    font-weight: 100;
-    text-align: center;
-    background-color: rgb(212, 154, 127);
-    margin: 20px auto 10px;
-    width: 341px;
-    height: 40px;
-    border-radius: 2px;
-    opacity: 0;
-    transition:  0.5s;
+body {
+  background-color: rgb(17, 21, 26);
 }
-#calc{
-    background-color: rgb(133, 133, 133);
-    width: 341px;
-    height: 440px;
-    position: absolute;
-    left: 37.5%;
-    border-radius: 3px;
-    border: 2px solid rgb(47, 57, 70);
+
+#box {
+  margin: 20px auto 10px;
+  width: 341px;
+  height: 40px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 24px;
+  font-weight: 100;
+  text-align: center;
+  background-color: rgb(212, 154, 127);
+  border-radius: 2px;
+  opacity: 0;
+  transition: 0.5s;
 }
-#screen{
-    background-color: rgb(197, 219, 223);
-    font-family: monospace;
-    font-size: 30px;
-    width: 92%;
-    height: 55px;
-    margin: 20px auto 10px;
-    padding: 20px 5px 0px 5px;
-    border-radius: 2px;
-    overflow-x: auto;
-    overflow-y: hidden;
+#calc {
+  background-color: rgb(133, 133, 133);
+  width: 341px;
+  height: 440px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 3px;
+  border: 2px solid rgb(47, 57, 70);
 }
-#Keys{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    margin: 3px;
-    border-top: solid rgb(47, 57, 70) 2px;
-    padding-top: 10px;
-    margin: 3px;
+#screen {
+  background-color: rgb(197, 219, 223);
+  font-family: monospace;
+  font-size: 30px;
+  width: 92%;
+  height: 55px;
+  margin: 20px auto 10px;
+  padding: 20px 5px 0px 5px;
+  border-radius: 2px;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
-#Keys > div{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    font-weight: 100;
-    text-align: center;
-    margin: 5px;
-    padding: 5px 0 15px 0;
-    width: 70px;
-    height: 30px;
-    border-radius: 2px;
+#Keys {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 3px;
+  border-top: solid rgb(47, 57, 70) 2px;
+  padding-top: 10px;
+  margin: 3px;
 }
-.nums{background-color: whitesmoke;}
-.nums:hover{background-color: rgb(211, 211, 211); cursor: pointer;}
-.nums:active{background-color: rgb(190, 190, 190);}
-.top{background-color: rgb(184, 211, 135);}
-.top:hover{background-color: rgb(198, 228, 143); cursor: pointer;}
-.top:active{background-color: rgb(168, 192, 123)}
-.ops,#equal{background-color: rgb(58, 108, 214);}
-.ops:hover,#equal:hover{background-color: rgb(79, 127, 230); cursor: pointer;}
-.ops:active,#equal:active{background-color: rgb(49, 89, 175);}
+#Keys > div {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 30px;
+  font-weight: 100;
+  text-align: center;
+  margin: 5px;
+  padding: 5px 0 15px 0;
+  width: 70px;
+  height: 30px;
+  border-radius: 2px;
+}
+.nums {
+  background-color: whitesmoke;
+}
+.nums:hover {
+  background-color: rgb(211, 211, 211); 
+  cursor: pointer;
+}
+.nums:active {
+  background-color: rgb(190, 190, 190);
+}
+.top {
+  background-color: rgb(184, 211, 135);
+}
+.top:hover {
+  background-color: rgb(198, 228, 143); 
+  cursor: pointer;
+}
+.top:active {
+  background-color: rgb(168, 192, 123)
+}
+.ops,#equal {
+  background-color: rgb(58, 108, 214);
+}
+.ops:hover,#equal:hover {
+  background-color: rgb(79, 127, 230); 
+  cursor: pointer;
+}
+.ops:active,#equal:active {
+  background-color: rgb(49, 89, 175);
+}
